target/CSELParser.py
# Generated from main/csel/parser/CSEL.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO



class CSELParser ( Parser ):

    grammarFileName = "CSEL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'Let'", "'Constant'", "'='", "'Number'", 
                     "'Boolean'", "'String'", "'JSON'", "'Array'", "'Function'", 
                     "'Return'", "'If'", "'Elif'", "'Else'", "'Break'", 
                     "'Continue'", "'Call'", "'For'", "'While'", "'Of'", 
                     "'In'", "'+'", "'+.'", "'-'", "'*'", "'/'", "'%'", 
                     "'!'", "'&&'", "'||'", "'=='", "'==.'", "'!='", "'<'", 
                     "'>'", "'<='", "'>='", "','", "'.'", "':'", "';'", 
                     "'['", "']'", "'{'", "'}'", "'('", "')'" ]

    symbolicNames = [ "<INVALID>", "LET", "CONST", "ASSIGN", "NUMBER", "BOOLEAN", 
                      "STRING", "JSON", "ARRAY", "FUN", "RET", "IF", "ELIF", 
                      "ELSE", "BREAK", "CONT", "CALL", "FOR", "WHILE", "OF", 
                      "IN", "ADD", "STRADD", "NEG", "MUL", "DIV", "MOD", 
                      "NOT", "AND", "OR", "EQ", "STREQ", "NEQ", "LT", "GT", 
                      "LEQ", "GEQ", "CM", "DOT", "CL", "SM", "LSB", "RSB", 
                      "LB", "RB", "LP", "RP", "COMMENT", "WS", "INTLIT", 
                      "FLOATLIT", "BOOLIT", "STRINGLIT", "ID", "CONSTID", 
                      "ERROR_CHAR", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", 
                      "UNTERMINATED_COMMENT" ]

    RULE_program = 0
    RULE_decls = 1
    RULE_funcdecl = 2
    RULE_paramlist = 3
    RULE_param = 4
    RULE_body = 5
    RULE_mytype = 6
    RULE_typname = 7
    RULE_array = 8
    RULE_json = 9
    RULE_keyval = 10
    RULE_expression = 11
    RULE_exp0 = 12
    RULE_exp1 = 13
    RULE_exp2 = 14
    RULE_exp3 = 15
    RULE_exp4 = 16
    RULE_exp5 = 17
    RULE_exp6 = 18
    RULE_operand = 19
    RULE_index_exp = 20
    RULE_json_exp = 21
    RULE_post_flix_array_exp = 22
    RULE_post_flix_json_exp = 23
    RULE_statement = 24
    RULE_stm_list = 25
    RULE_constdecl = 26
    RULE_constmodule = 27
    RULE_vardecl = 28
    RULE_varmodule = 29
    RULE_dimension = 30
    RULE_assign = 31
    RULE_lhs = 32
    RULE_call = 33
    RULE_callstm = 34
    RULE_exp_list = 35
    RULE_ret = 36
    RULE_ifstm = 37
    RULE_if_module = 38
    RULE_elif_module = 39
    RULE_else_module = 40
    RULE_forinstm = 41
    RULE_foronstm = 42
    RULE_whilestm = 43
    RULE_brk = 44
    RULE_cont = 45

    ruleNames =  [ "program", "decls", "funcdecl", "paramlist", "param", 
                   "body", "mytype", "typname", "array", "json", "keyval", 
                   "expression", "exp0", "exp1", "exp2", "exp3", "exp4", 
                   "exp5", "exp6", "operand", "index_exp", "json_exp", "post_flix_array_exp", 
                   "post_flix_json_exp", "statement", "stm_list", "constdecl", 
                   "constmodule", "vardecl", "varmodule", "dimension", "assign", 
                   "lhs", "call", "callstm", "exp_list", "ret", "ifstm", 
                   "if_module", "elif_module", "else_module", "forinstm", 
                   "foronstm", "whilestm", "brk", "cont" ]

    EOF = Token.EOF
    LET=1
    CONST=2
    ASSIGN=3
    NUMBER=4
    BOOLEAN=5
    STRING=6
    JSON=7
    ARRAY=8
    FUN=9
    RET=10
    IF=11
    ELIF=12
    ELSE=13
    BREAK=14
    CONT=15
    CALL=16
    FOR=17
    WHILE=18
    OF=19
    IN=20
    ADD=21
    STRADD=22
    NEG=23
    MUL=24
    DIV=25
    MOD=26
    NOT=27
    AND=28
    OR=29
    EQ=30
    STREQ=31
    NEQ=32
    LT=33
    GT=34
    LEQ=35
    GEQ=36
    CM=37
    DOT=38
    CL=39
    SM=40
    LSB=41
    RSB=42
    LB=43
    RB=44
    LP=45
    RP=46
    COMMENT=47
    WS=48
    INTLIT=49
    FLOATLIT=50
    BOOLIT=51
    STRINGLIT=52
    ID=53
    CONSTID=54
    ERROR_CHAR=55
    UNCLOSE_STRING=56
    ILLEGAL_ESCAPE=57
    UNTERMINATED_COMMENT=58

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CSELParser.EOF, 0)

        def decls(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSELParser.DeclsContext)
            else:
                return self.getTypedRuleContext(CSELParser.DeclsContext,i)


        def getRuleIndex(self):
            return CSELParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = CSELParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 92
                self.decls()
                self.state = 95 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CSELParser.LET) | (1 << CSELParser.CONST) | (1 << CSELParser.FUN))) != 0)):
                    break

            self.state = 97
            self.match(CSELParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vardecl(self):
            return self.getTypedRuleContext(CSELParser.VardeclContext,0)


        def funcdecl(self):
            return self.getTypedRuleContext(CSELParser.FuncdeclContext,0)


        def constdecl(self):
            return self.getTypedRuleContext(CSELParser.ConstdeclContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_decls

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecls" ):
                return visitor.visitDecls(self)
            else:
                return visitor.visitChildren(self)




    def decls(self):

        localctx = CSELParser.DeclsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decls)
        try:
            self.state = 102
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CSELParser.LET]:
                self.enterOuterAlt(localctx, 1)
                self.state = 99
                self.vardecl()
                pass
            elif token in [CSELParser.FUN]:
                self.enterOuterAlt(localctx, 2)
                self.state = 100
                self.funcdecl()
                pass
            elif token in [CSELParser.CONST]:
                self.enterOuterAlt(localctx, 3)
                self.state = 101
                self.constdecl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncdeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUN(self):
            return self.getToken(CSELParser.FUN, 0)

        def ID(self):
            return self.getToken(CSELParser.ID, 0)

        def LP(self):
            return self.getToken(CSELParser.LP, 0)

        def RP(self):
            return self.getToken(CSELParser.RP, 0)

        def body(self):
            return self.getTypedRuleContext(CSELParser.BodyContext,0)


        def paramlist(self):
            return self.getTypedRuleContext(CSELParser.ParamlistContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_funcdecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncdecl" ):
                return visitor.visitFuncdecl(self)
            else:
                return visitor.visitChildren(self)




    def funcdecl(self):

        localctx = CSELParser.FuncdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_funcdecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(CSELParser.FUN)
            self.state = 105
            self.match(CSELParser.ID)
            self.state = 106
            self.match(CSELParser.LP)
            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CSELParser.ID:
                self.state = 107
                self.paramlist()


            self.state = 110
            self.match(CSELParser.RP)
            self.state = 111
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamlistContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSELParser.ParamContext)
            else:
                return self.getTypedRuleContext(CSELParser.ParamContext,i)


        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(CSELParser.CM)
            else:
                return self.getToken(CSELParser.CM, i)

        def getRuleIndex(self):
            return CSELParser.RULE_paramlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamlist" ):
                return visitor.visitParamlist(self)
            else:
                return visitor.visitChildren(self)




    def paramlist(self):

        localctx = CSELParser.ParamlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_paramlist)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.param()
            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CSELParser.CM:
                self.state = 114
                self.match(CSELParser.CM)
                self.state = 115
                self.param()
                self.state = 120
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(CSELParser.ID, 0)

        def dimension(self):
            return self.getTypedRuleContext(CSELParser.DimensionContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_param

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = CSELParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_param)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(CSELParser.ID)
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==CSELParser.LSB:
                self.state = 122
                self.dimension()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(CSELParser.LB, 0)

        def stm_list(self):
            return self.getTypedRuleContext(CSELParser.Stm_listContext,0)


        def RB(self):
            return self.getToken(CSELParser.RB, 0)

        def getRuleIndex(self):
            return CSELParser.RULE_body

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBody" ):
                return visitor.visitBody(self)
            else:
                return visitor.visitChildren(self)




    def body(self):

        localctx = CSELParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(CSELParser.LB)
            self.state = 126
            self.stm_list()
            self.state = 127
            self.match(CSELParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MytypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTLIT(self):
            return self.getToken(CSELParser.INTLIT, 0)

        def FLOATLIT(self):
            return self.getToken(CSELParser.FLOATLIT, 0)

        def BOOLIT(self):
            return self.getToken(CSELParser.BOOLIT, 0)

        def STRINGLIT(self):
            return self.getToken(CSELParser.STRINGLIT, 0)

        def array(self):
            return self.getTypedRuleContext(CSELParser.ArrayContext,0)


        def json(self):
            return self.getTypedRuleContext(CSELParser.JsonContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_mytype

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMytype" ):
                return visitor.visitMytype(self)
            else:
                return visitor.visitChildren(self)




    def mytype(self):

        localctx = CSELParser.MytypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_mytype)
        try:
            self.state = 135
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CSELParser.INTLIT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 129
                self.match(CSELParser.INTLIT)
                pass
            elif token in [CSELParser.FLOATLIT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 130
                self.match(CSELParser.FLOATLIT)
                pass
            elif token in [CSELParser.BOOLIT]:
                self.enterOuterAlt(localctx, 3)
                self.state = 131
                self.match(CSELParser.BOOLIT)
                pass
            elif token in [CSELParser.STRINGLIT]:
                self.enterOuterAlt(localctx, 4)
                self.state = 132
                self.match(CSELParser.STRINGLIT)
                pass
            elif token in [CSELParser.LSB]:
                self.enterOuterAlt(localctx, 5)
                self.state = 133
                self.array()
                pass
            elif token in [CSELParser.LB]:
                self.enterOuterAlt(localctx, 6)
                self.state = 134
                self.json()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypnameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBER(self):
            return self.getToken(CSELParser.NUMBER, 0)

        def STRING(self):
            return self.getToken(CSELParser.STRING, 0)

        def BOOLEAN(self):
            return self.getToken(CSELParser.BOOLEAN, 0)

        def JSON(self):
            return self.getToken(CSELParser.JSON, 0)

        def ARRAY(self):
            return self.getToken(CSELParser.ARRAY, 0)

        def getRuleIndex(self):
            return CSELParser.RULE_typname

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypname" ):
                return visitor.visitTypname(self)
            else:
                return visitor.visitChildren(self)




    def typname(self):

        localctx = CSELParser.TypnameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_typname)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CSELParser.NUMBER) | (1 << CSELParser.BOOLEAN) | (1 << CSELParser.STRING) | (1 << CSELParser.JSON) | (1 << CSELParser.ARRAY))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LSB(self):
            return self.getToken(CSELParser.LSB, 0)

        def RSB(self):
            return self.getToken(CSELParser.RSB, 0)

        def mytype(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSELParser.MytypeContext)
            else:
                return self.getTypedRuleContext(CSELParser.MytypeContext,i)


        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(CSELParser.CM)
            else:
                return self.getToken(CSELParser.CM, i)

        def getRuleIndex(self):
            return CSELParser.RULE_array

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray" ):
                return visitor.visitArray(self)
            else:
                return visitor.visitChildren(self)




    def array(self):

        localctx = CSELParser.ArrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_array)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(CSELParser.LSB)
            self.state = 148
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CSELParser.LSB) | (1 << CSELParser.LB) | (1 << CSELParser.INTLIT) | (1 << CSELParser.FLOATLIT) | (1 << CSELParser.BOOLIT) | (1 << CSELParser.STRINGLIT))) != 0):
                self.state = 140
                self.mytype()
                self.state = 145
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==CSELParser.CM:
                    self.state = 141
                    self.match(CSELParser.CM)
                    self.state = 142
                    self.mytype()
                    self.state = 147
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 150
            self.match(CSELParser.RSB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class JsonContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(CSELParser.LB, 0)

        def keyval(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSELParser.KeyvalContext)
            else:
                return self.getTypedRuleContext(CSELParser.KeyvalContext,i)


        def RB(self):
            return self.getToken(CSELParser.RB, 0)

        def CM(self, i:int=None):
            if i is None:
                return self.getTokens(CSELParser.CM)
            else:
                return self.getToken(CSELParser.CM, i)

        def getRuleIndex(self):
            return CSELParser.RULE_json

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitJson" ):
                return visitor.visitJson(self)
            else:
                return visitor.visitChildren(self)




    def json(self):

        localctx = CSELParser.JsonContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_json)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.match(CSELParser.LB)
            self.state = 158
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 153
                    self.keyval()
                    self.state = 154
                    self.match(CSELParser.CM) 
                self.state = 160
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

            self.state = 161
            self.keyval()
            self.state = 162
            self.match(CSELParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class KeyvalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(CSELParser.ID, 0)

        def CL(self):
            return self.getToken(CSELParser.CL, 0)

        def mytype(self):
            return self.getTypedRuleContext(CSELParser.MytypeContext,0)


        def getRuleIndex(self):
            return CSELParser.RULE_keyval

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitKeyval" ):
                return visitor.visitKeyval(self)
            else:
                return visitor.visitChildren(self)




    def keyval(self):

        localctx = CSELParser.KeyvalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_keyval)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 164
            self.match(CSELParser.ID)
            self.state = 165
            self.match(CSELParser.CL)
            self.state = 166
            self.mytype()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp0(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSELParser.Exp0Context)
            else:
                return self.getTypedRuleContext(CSELParser.Exp0Context,i)


        def STRADD(self):
            return self.getToken(CSELParser.STRADD, 0)

        def STREQ(self):
            return self.getToken(CSELParser.STREQ, 0)

        def getRuleIndex(self):
            return CSELParser.RULE_expression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)




    def expression(self):

        localctx = CSELParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_expression)
        self._la = 0 # Token type
        try:
            self.state = 173
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 168
                self.exp0()
                self.state = 169
                _la = self._input.LA(1)
                if not(_la==CSELParser.STRADD or _la==CSELParser.STREQ):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 170
                self.exp0()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 172
                self.exp0()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Exp0Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp1(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CSELParser.Exp1Context)
            else:
                return self.getTypedRuleContext(CSELParser.Exp1Context,i)


        def EQ(self):
            return self.getToken(CSELParser.EQ, 0)

        def NEQ(self):
            return self.getToken(CSELParser.NEQ, 0)

        def GT(self):
            return self.getToken(CSELParser.GT, 0)

        def LT(self):
            return self.getToken(CSELParser.LT, 0)

        def GEQ(self):
            return self.getToken(CSELParser.GEQ, 0)

        def LEQ(self):
            return self.getToken(CSELParser.LEQ, 0)

        def getRuleIndex(self):
            return CSELParser.RULE_exp0

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExp0" ):
                return visitor.visitExp0(self)
            else:
                return visitor.visitChildren(self)




    def exp0(self):

        localctx = CSELParser.Exp0Context(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_exp0)
        self._la = 0 # Token type
        try:
            self.state = 180
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 175
                self.exp1(0)
                self.state = 176
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CSELParser.EQ) | (1 << CSELParser.NEQ) | (1 << CSELParser.LT) | (1 << CSELParser.GT) | (1 << CSELParser.LEQ) | (1 << CSELParser.GEQ))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 177
                self.exp1(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 179
                self.exp1(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Exp1Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exp2(self):
            return self.getTypedRuleContext(CSELParser.Exp2Context,0)


        def exp1(self):
            return self.getTypedRuleContext(CSELParser.Exp1Context,0)


        def AND(self):
            return self.getToken(CSELParser.AND, 0)

